@@ -291,6 +291,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 850i   (EXPERIMENTAL)
        Canon PIXMA 860i   (EXPERIMENTAL)
        Canon PIXMA 865R   (EXPERIMENTAL)
+       Canon PIXMA 900PD  (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
        Canon PIXMA 6500i  (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
@@ -304,6 +305,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i550X  (EXPERIMENTAL)
        Canon PIXMA i560X  (EXPERIMENTAL)
        Canon PIXMA i900D  (EXPERIMENTAL)
+       Canon PIXMA i905D  (EXPERIMENTAL)
        Canon PIXMA i950   (EXPERIMENTAL)
        Canon PIXMA i960   (EXPERIMENTAL)
        Canon PIXMA i6100  (EXPERIMENTAL)
